# MPMP19

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: c-cpp.yml
include/: mpmp19.hpp
src/: Algorithm.cpp  Algorithm.hpp  BigInt.hpp  Config.cpp  Config.hpp  Context.hpp  FileHandle.hpp  Hints.hpp  PerformModulus.hpp  PrimeGapIterator.hpp  PrimeGapList.cpp  PrimeGapList.hpp  ProcessBatch.hpp  ProgressLogger.cpp  ProgressLogger.hpp  TermBuffer.cpp  TermBuffer.hpp  ThreadState.hpp  mpmp19.cpp  mpmp19_error.hpp
src/app/: main.cpp
